Arreglo del 2 prototipo y avance de la 3 entrega